--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,41 @@
-feedparser==6.0.11
-ffmpeg-python==0.2.0
-google-cloud-storage==2.14.0
-google-cloud-vision==3.7.0
-google-cloud-videointelligence==2.13.3
-pyink==23.12.1
-pylint==3.0.3
-requests==2.30.0
-urllib3==2.1.0
+annotated-types==0.7.0
+cachetools==5.3.3
+certifi==2024.7.4
+charset-normalizer==3.3.2
+docstring_parser==0.16
+ffmpeg==1.4
+google-api-core==2.19.1
+google-auth==2.32.0
+google-cloud-aiplatform==1.49.0
+google-cloud-bigquery==3.25.0
+google-cloud-core==2.4.1
+google-cloud-resource-manager==1.12.4
+google-cloud-speech==2.26.1
+google-cloud-storage==2.17.0
+google-cloud-translate==3.15.4
+google-crc32c==1.5.0
+google-resumable-media==2.7.1
+googleapis-common-protos==1.63.2
+grpc-google-iam-v1==0.13.1
+grpcio==1.64.1
+grpcio-status==1.62.2
+idna==3.7
+numpy==2.0.0
+packaging==24.1
+pandas==2.2.2
+proto-plus==1.24.0
+protobuf==4.25.3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pydantic==2.8.2
+pydantic_core==2.20.1
+python-dateutil==2.9.0.post0
+pytz==2024.1
+requests==2.32.3
+rsa==4.9
+shapely==2.0.5
+six==1.16.0
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+vertexai==1.49.0
