Remove redundant top-level folder and separate solutions.
Change-Id: Iefac8726c4d3562ef7d5d8f07903b78fe6ef0965

--- a/.github/workflows/python-ubuntu.yml
+++ b/.github/workflows/python-ubuntu.yml
@@ -41,5 +41,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Test
-        run: python -m unittest discover video_metadata_toolkit  -p "*_test.py"
+      - name: Test (ai_metadata)
+        run: python -m unittest discover ai_metadata  -p "*_test.py"
+      - name: Test (celebrity_detection)
+        run: python -m unittest discover celebrity_detection  -p "*_test.py"
+      - name: Test (image_metadata)
+        run: python -m unittest discover image_metadata  -p "*_test.py"
+      - name: Test (smart_ad_breaks)
+        run: python -m unittest discover smart_ad_breaks  -p "*_test.py"
