--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ mccabe==0.7.0
 mypy-extensions==1.0.0
 numpy==2.1.2
 packaging==24.1
+pandas==2.2.3
 pathspec==0.12.1
 platformdirs==4.3.6
 proto-plus==1.24.0
